update z-index of options-menu and remove scroll-table class to prevent overlap on course index

--- a/app/assets/stylesheets/layout/_context_menu.sass
+++ b/app/assets/stylesheets/layout/_context_menu.sass
@@ -24,10 +24,11 @@
   padding-left: 0
   background-color: white
   font-size: 0.7rem
+  text-align: left
   display: none
   position: absolute
   box-shadow: 0 2px 5px 0 rgba($color-black, 0.16), 0 2px 10px 0 rgba($color-black,0.12)
-  z-index: 100
+  z-index: 98
   right: 0
   width: 160px
   li
